Fixed spelling errors and alignment

--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ body{
     #aboutme{
         background-size: 100% auto;
     }
+    #contact{
+        background-size: 100% auto;
+    }
 }
 
 /*
@@ -163,7 +166,7 @@ a:hover{
     top: 400px;
     left: 0;
     background-image: url('images/night.png');
-    height: 900px;
+    height: 860px;
     width: 100%;
     color: azure;
 }
@@ -206,11 +209,14 @@ article p{
 #aboutme{
     position: absolute;
     left: 0;
-    top: 1256px;
+    top: 1245px;
     width: 100%;
     height: 900px;
     background-image: url('images/starrynight.png');
     background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     color: azure;
 }
 
@@ -231,10 +237,15 @@ article p{
     text-align: center;
 }
 
+#aboutme img{
+    max-height: 600px;
+    max-width: 400px;
+}
+
 footer{
     position: absolute;
     left: 0;
-    top: 2156px;
+    top: 2145px;
     width: 100%;
     height: 300px;
     background: url('./images/mountainbottom.jpg');
@@ -259,6 +270,6 @@ footer h2{
 
 footer a{
     position: absolute;
-    left: 45%;
+    left: 48%;
     bottom: 25px;
 }
